--- a/businessplan.adoc
+++ b/businessplan.adoc
@@ -86,3 +86,5 @@ tournée ou enregistrer un album, par exemple.
 ** Bretagne-Pays de la Loire
 ** Grand Est
 ** Autre (précisez) :
+
+SASSÉPAMALÉPACHÈR : https://www.logic-immo.com/detail-vente-8ce5f720-a020-6828-5677-9c7a7630c0cc.htm
